--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "compose-middleware": "^5.0.1",
+    "create-react-ref": "^0.1.0",
     "jquery": "^3.4.1",
     "mixitup": "^3.3.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-create-ref": "^1.0.1",
     "react-dom": "^16.9.0",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
