--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "compose-middleware": "^5.0.1",
     "create-react-ref": "^0.1.0",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "mixitup": "^3.3.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
@@ -20,6 +21,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
+    "react-slick": "^0.25.2",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "redux-thunk": "^2.3.0",
