--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "mixitup": "^3.3.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-accessible-accordion": "^3.0.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-bootstrap-sweetalert": "^4.4.1",
     "react-create-ref": "^1.0.1",
     "react-dom": "^16.9.0",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
+    "react-scroll-up-button": "^1.6.4",
     "react-slick": "^0.25.2",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
